--- a/css/styles.css
+++ b/css/styles.css
@@ -4,12 +4,12 @@
 	--accent-color: #2196f3;
 	--primare-bg-color: #ffffff;
 	--hero-bg-color: #2f303a;
-	--button-bg-color: #f5f4fa;
+	--second-bg-color: #f5f4fa;
+	--secondary-accent-color: #000000;
 }
 
 .page {
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-		"Helvetica Neue", sans-serif;
+	font-family: "Roboto", sans-serif;
 	color: var(--primary-text-color);
 	background-color: var(--primare-bg-color);
 }
@@ -20,15 +20,20 @@
 
 .link {
 	text-decoration: none;
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 1.14;
+	letter-spacing: 0.02em;
+	color: var(--title-text-color);
 }
 
 .logo {
-	font-family: "Raleway";
+	font-family: "Raleway", sans-serif;
 	font-weight: 700;
 	font-size: 26px;
 	line-height: 1.19;
 	letter-spacing: 0.03em;
-	color: var(--title-text-color);
+	color: var(--secondary-accent-color);
 }
 
 .logo-web {
@@ -40,13 +45,6 @@
 }
 
 /* site-nav */
-.site-nav .link {
-	font-weight: 500;
-	font-size: 14px;
-	line-height: 1.14;
-	letter-spacing: 0.02em;
-	color: var(--title-text-color);
-}
 
 .site-nav .link.current {
 	color: var(--accent-color);
@@ -57,7 +55,8 @@
 	color: var(--accent-color);
 }
 
-.auth-nav .link {
+/* .auth-nav */
+.link {
 	font-weight: 500;
 	font-size: 14px;
 	line-height: 1.14;
@@ -67,14 +66,17 @@
 
 .auth-nav .link:hover,
 .auth-nav .link:focus,
-.f-bar .link:hover,
-.f-bar .link:hover {
+.footer-nav .link:hover,
+.footer-nav .link:hover {
 	color: var(--accent-color);
 }
 
 /* Styles index.html */
 
 /* Hero */
+.hero {
+	background-color: var(--hero-bg-color);
+}
 .hero-title {
 	font-weight: 900;
 	font-size: 44px;
@@ -83,7 +85,6 @@
 	letter-spacing: 0.06em;
 	text-transform: uppercase;
 	color: var(--primare-bg-color);
-	background-color: var(--hero-bg-color);
 }
 
 .section-title {
@@ -95,30 +96,37 @@
 	color: var(--title-text-color);
 }
 
-.feature-list .title {
+.feature-title {
 	font-weight: 700;
 	font-size: 14px;
 	line-height: 1.14;
 	letter-spacing: 0.03em;
 	text-transform: uppercase;
+	color: var(--title-text-color);
 }
 
-.feature-list .text {
+.text {
 	font-size: 14px;
 	line-height: 1.71;
 	letter-spacing: 0.03em;
 }
 
-.title {
+.team {
+	background-color: var(--second-bg-color);
+}
+.team-bg {
+	background-color: var(--primare-bg-color);
+}
+
+.team-title {
 	font-weight: 500;
 	font-size: 16px;
 	line-height: 1.19;
-	letter-spacing: 0.03em;
-
 	color: var(--title-text-color);
+	letter-spacing: 0.03em;
 }
 
-.team-list .text {
+.team-text {
 	font-size: 16px;
 	line-height: 1.19;
 	letter-spacing: 0.03em;
@@ -126,35 +134,37 @@
 
 /* Button */
 .hero-buttom {
+	font-family: Roboto, sans-serif;
 	font-weight: 700;
 	font-size: 16px;
 	line-height: 1.88;
 	display: flex;
 	letter-spacing: 0.06em;
-	color: var(--button-bg-color);
+	color: var(--primare-bg-color);
 	background-color: var(--accent-color);
 	cursor: pointer;
 }
 
 .button {
+	font-family: Roboto, sans-serif;
 	font-weight: 500;
 	font-size: 16px;
 	line-height: 1.63;
 	letter-spacing: 0.03em;
 	color: var(--title-text-color);
-	background-color: var(--button-bg-color);
+	background-color: var(--second-bg-color);
 	cursor: pointer;
 }
 
 .button:hover,
 .button:focus {
-	color: var(--button-bg-color);
+	color: var(--primare-bg-color);
 	background-color: var(--accent-color);
 }
 
 /* Styles portfolio.html */
 
-.work-list .title {
+.work-list__title {
 	font-weight: 700;
 	font-size: 18px;
 	line-height: 2;
@@ -162,7 +172,7 @@
 	color: var(--title-text-color);
 }
 
-.work-list .text {
+.work-list__text {
 	font-size: 16px;
 	line-height: 1.88;
 	letter-spacing: 0.03em;
@@ -170,18 +180,30 @@
 
 /* Styles footer */
 
-.f-bar {
-	font-style: normal;
-	font-size: 14px;
-	line-height: 1.71;
+.logo-footer {
+	font-weight: 700;
+	font-size: 26px;
+	line-height: 1.19;
 	letter-spacing: 0.03em;
-	background-color: var(--hero-bg-color);
-}
-
-.f-bar .address {
 	color: var(--primare-bg-color);
 }
 
-.f-bar .contacts {
+.footer {
+	background-color: var(--hero-bg-color);
+
+	font-size: 14px;
+	line-height: 1.71;
+	letter-spacing: 0.03em;
+}
+
+.footer-nav {
+	font-style: normal;
+}
+
+.address {
+	color: var(--primare-bg-color);
+}
+
+.contacts {
 	color: rgba(255, 255, 255, 0.6);
 }
