--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,13 @@
 	letter-spacing: 0.02em;
 	color: var(--title-text-color);
 }
+.auth-nav-link {
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 1.14;
+	letter-spacing: 0.02em;
+	color: var(--primary-text-color);
+}
 
 .nav .current {
 	color: var(--accent-color);
